Standardized "File Name ↔ URL" Conventions

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -629,7 +629,7 @@
                 is the same.
             <ul>
                 <li>
-                    <b>Pixiv File Name Format: </b><b style="color: dodgerblue">ID</b>_AccountName_WhateverElse
+                    <b>Pixiv File Name Format: </b>AccountName_<b style="color: dodgerblue">ID</b>_WhateverElse
                 </li>
             </ul>
             </p>
@@ -642,7 +642,7 @@
                     This design is intentional as it's the easiest way to identify the image author!</i>
             <ul>
                 <li>
-                    <b>FurAffinity File Name Format: </b><b style="color: brown">ID</b>.AccountName.WhateverElse
+                    <b>FurAffinity File Name Format: </b>AccountName.<b style="color: brown">ID</b>.WhateverElse
                 </li>
             </ul>
             </p>
