Small Tweaks to `YT-DLP GUI`

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -189,7 +189,7 @@
             <label for="Subtitles">Subtitles (.vtt)</label>
             <br>
             <input type="checkbox" name="Comments" id="Comments">
-            <label for="Comments">Comments (.json)</label>
+            <label for="Comments">Metadata + Comments (.json)</label>
 
             <h3>Set Video Resolution</h3>
 
