--- a/views/index.ejs
+++ b/views/index.ejs
@@ -38,7 +38,7 @@
             -moz-box-sizing: border-box;
             box-sizing: border-box;
 
-            font-family: liberation mono;
+            font-family: consolas, monospace;
             resize: vertical;
             width: 100%;
             font-size: small;
